--- a/KHHealthCareProj/Base.lproj/Main.storyboard
+++ b/KHHealthCareProj/Base.lproj/Main.storyboard
@@ -1301,14 +1301,14 @@
                         <viewControllerLayoutGuide type="bottom" id="XZT-a3-L7W"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="xm6-vx-rRy">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="3w2-b2-ItU">
-                                <rect key="frame" x="0.0" y="102" width="600" height="400"/>
+                                <rect key="frame" x="0.0" y="102" width="375" height="467"/>
                             </scrollView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Ethnicity/Family/Lifestyle Risk Factor" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="es0-FT-IdD">
-                                <rect key="frame" x="104" y="36" width="393" height="49"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Ethnicity/Family/Lifestyle Risk Factor" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="es0-FT-IdD">
+                                <rect key="frame" x="1.5" y="36" width="372.5" height="24.5"/>
                                 <fontDescription key="fontDescription" name="Helvetica-Bold" family="Helvetica" pointSize="21"/>
                                 <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
@@ -1323,7 +1323,7 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="sst-GJ-cBg">
-                                <rect key="frame" x="528" y="530" width="32" height="30"/>
+                                <rect key="frame" x="307" y="597" width="32" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="104" id="IpQ-1a-aZP"/>
                                 </constraints>
@@ -1401,6 +1401,7 @@
                             </mask>
                         </variation>
                     </view>
+                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
                     <connections>
                         <outlet property="scrollView" destination="3w2-b2-ItU" id="Cu4-gk-RU8"/>
                         <segue destination="G7Q-TD-Ugq" kind="showDetail" identifier="GeneralEFLtoMedicalSegue" id="4QW-MI-2hj"/>
